crates/next-custom-transforms/tests/errors/server-actions/server-graph/27/input.js
'use action'

export async function foo() {}
